# ai-event-aggregator

./: .env.example  .gitignore  AGENTS.md  INTERACTIVE_WINDOW.md  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
agent/: curator_agent.py  event_agent.py  events_email_agent.py  youtube_agent.py  youtube_email_agent.py
app/dashboard/: __init__.py  render.py
app/db/: bootstrap.py  models.py  repository.py  session.py
app/email/: render.py
app/monitoring/: __init__.py  alerts.py  logging_config.py  models.py  queries.py  report.py  stage.py  summary.py  tracker.py
app/scrapers/events/: __init__.py  feeds.py  scraper.py
app/scrapers/youtube/: __init__.py  channels.py  resolver.py  scraper.py  selector.py
app/services/: process_curator.py  process_dashboard.py  process_digest.py  process_events_email.py  process_youtube_email.py  retry_utils.py
docs/: DEMO_PHASES.md  FUTURE_FEATURES.md  MONITORING_PHASES.md  MONITORING_QUERIES.md  PROJECT_STATUS.md  user_context.md
docs/context_snapshots/: 2026-03-12_132257_initial-streamlit-context.md  2026-03-12_132456_streamlit-context.md
infra/: docker-compose.yml
scripts/: create_tables.py  demo_app.py  get_channel_id.py  monitoring_report.py
templates/: dashboard.html
tests/: test_event_scraper.py  test_youtube_scraper.py
